# lc

./: .clang-format  .cproject  .gitmodules  .project  CMakeLists.txt  LCUsb.cpp  LCUsb.h  TRingBuffer.hpp  hid.c
RESONANSE_FLC/PCB/LC_GENERATOR/: LC.kicad_pcb  LC.pro  LC.sch
RESONANSE_FLC/PCB/LC_GENERATOR/footprints/: Choke_Toroid_horizontal_Diameter10-5mm_Amidon-T37_2.kicad_mod
RESONANSE_FLC/PCB/PIC/: BF998.dcm  FREQ.bak  FREQ.sch  G3UUR.sch  MCU.bak  MCU.sch  PIC.bak  PIC.kicad_pcb  PIC.kicad_pcb-bak  PIC.net  PIC.pro  _autosave-PIC.kicad_pcb  fp-lib-table
RESONANSE_FLC/PCB/PIC/gerber/: PIC-B.Cu.gbl  PIC-B.Mask.gbs  PIC-Edge.Cuts.gm1  PIC-F.Cu.gtl  PIC-F.Mask.gts  PIC.drl
RESONANSE_FLC/PCB/STM32_BOARD/: G3UUR.bak  INPUT_FREQUENCY.bak  INPUT_FREQUENCY.sch  LCSDR.bak  LCSDR.kicad_pcb  LCSDR.kicad_pcb-bak  LCSDR.net  LCSDR.pro  LCSDR.xml  MCU.bak  MCU.sch  PowerSupplay.bak  display.bak  display.sch  microSD.bak  syntez.bak  syntez.sch
RESONANSE_FLC/PCB/STM32_BOARD/PowerSupplay/: LCSDR.bak  LCSDR.csv  LCSDR.kicad_pcb-bak  LCSDR.net
RESONANSE_FLC/PCB/STM32_BOARD/PowerSupplay/libs/: 3157.bak  LCSDR.bak
RESONANSE_FLC/SOFTWARE/: comm.py  counter-0.4.asm
RESONANSE_FLC/firmware/: counter.asm  make.sh
RESONANSE_FLC/firmware/STM32F103/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
RESONANSE_FLC/firmware/STM32F103/Src/: main.c  stm32f1xx_it.c
cmake/: FindWinHID.cmake
console/: CMakeLists.txt  main.cpp
example/: main.cpp
example/C/: CMakeLists.txt  main.cpp
example/L_calibration/: CMakeLists.txt
example/capacitance/: CMakeLists.txt  main.cpp
example/inductance/: CMakeLists.txt  main.cpp
lc_usb/: CMakeLists.txt
lc_usb/console/: CMakeLists.txt  main.cpp
lc_usb/src/: LCUsb.hpp  TRingBuffer.hpp
resonanse_FLC/PCB/: LC.bak  LC.kicad_pcb  LC.pro  LC.sch
resonanse_FLC/PCB/footprints/: Choke_Toroid_6,5x13mm_Vertical.kicad_mod
resonanse_FLC/PCB/libs/: bf998.lib
resonanse_FLC/firmware/: uart.asm
resonanse_FLC/firmware/STM32F103/: .cproject  .mxproject  .project  STM32F103.elf.launch  STM32F103.ioc
resonanse_FLC/firmware/STM32F103/Inc/: main.h
resonanse_FLC/firmware/STM32F103/Src/: stm32f1xx_hal_msp.c
src/: LCUsb.cpp  LCUsb.h  LCUsb.hpp  TRingBuffer.hpp  hid.c  hidapi.h
